--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-minify": "0.0.15",
     "gulp-replace": "^0.5.4",
-    "gulp-sass": "^2.2.0",
+    "gulp-sass": "^3.1.0",
     "gulp-sequence": "^0.4.6",
     "gulp-uglify": "^2.1.2",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-zip": "^4.0.0",
     "imagemin-pngquant": "^4.2.2",
-    "pug": "^2.0.0-rc.2"
+    "pug": "^2.0.0-rc.4"
+  },
+  "dependencies": {
+    "pug-cli": "^1.0.0-alpha6"
   }
 }
